<resources>
    <string name="app_name">CompVen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="user_email">Email</string>
    <string name="user_password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="politica">Al continuar, acepta nuestra política de privacidad y términos de servicio.</string>
    <string name="registrate">REGISTRARSE</string>
    <string name="button_login">INICIAR SESIÓN</string>
    <string name="sign_up"><u>Regístrate!</u>.</string>
    <string name="sign_in"><u>Inicia sesión!</u>.</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="test_search">Search</string>
    <string name="test_Category">Category</string>
    <string name="test_Seller">Seller</string>


</resources>